tools/editor-plugin/metascript.nvim/tree-sitter/grammar.js
    program: $ => repeat($._statement),

    // =========================================================================
    // Statements
    // =========================================================================

    _statement: $ => choice(
      $.import_statement,
      $.export_statement,
      $.class_declaration,
      $.actor_declaration,
      $.interface_declaration,
      $.struct_declaration,
      $.enum_declaration,
      $.function_declaration,
      $.macro_declaration,
      $.extern_declaration,
      $.variable_declaration,
      $.type_alias_declaration,
      $.test_declaration,
      $.expect_statement,
      $.defer_statement,
      $.return_statement,
      $.unreachable_statement,
      $.if_statement,
      $.switch_statement,
      $.for_statement,
      $.for_of_statement,
      $.for_in_statement,
      $.while_statement,
      $.do_while_statement,
      $.break_statement,
      $.continue_statement,
      $.labeled_statement,
      $.macro_directive_statement,
      $.expression_statement,
      $.block,
    ),

    // =========================================================================
    // Imports / Exports
    // =========================================================================

    variable_declaration: $ => seq(
      choice('const', 'let', 'var'),
      field('name', $.identifier),
      optional($.type_annotation),
      optional(seq('=', $._expression)),
      ';',
    ),

    // Type alias with optional distinct
    type_alias_declaration: $ => prec(2, seq(
      'type',
      field('name', $._type_identifier),
      optional($.type_parameters),
      '=',
      optional('distinct'),  // Metascript: distinct types
      choice($.discriminated_union_type, $.type),
      optional(';'),
    )),

    // Metascript: type X = match (disc: Enum) { Enum.A => { ... }, Enum.B => { ... } }
    _type_identifier: $ => alias($.identifier, $.type_identifier),

    type_annotation: $ => seq(':', $.type),

    type: $ => choice(
      $.primitive_type,
      $.metascript_type,
      $._type_identifier,  // Use type_identifier for user-defined types
      $.array_type,
      $.union_type,
      $.intersection_type,
      $.generic_type,
      $.function_type,      // (T) => U - closure/function type
      $.parenthesized_type, // (T) - for grouping in complex types
      $.object_type,        // { name: string, age: number }
    ),

    primitive_type: $ => choice(
      'string', 'number', 'boolean', 'char', 'void', 'any', 'unknown', 'never',
    ),

    function_type: $ => prec.dynamic(3, prec.right(2, seq(
      '(',
      optional(commaSep1($.function_type_parameter)),
      ')',
      '=>',
      field('return_type', $.type),
    ))),

    // Function type parameter: either just a type or named (x: type)
    // Uses _simple_type to avoid parenthesized_type ambiguity
    function_type_parameter: $ => choice(
      // Named parameter: x: number
      seq(
        field('name', $.identifier),
        ':',
        field('type', $._simple_type),
      ),
      // Type only: number (uses _simple_type to avoid ambiguity with parenthesized_type)
      $._simple_type,
    ),

    // Simple type - types that don't start with '(' to avoid function_type ambiguity
    _simple_type: $ => choice(
      $.primitive_type,
      $.metascript_type,
      $._type_identifier,
      $.array_type,
      $.union_type,
      $.intersection_type,
      $.generic_type,
    ),

    // Parenthesized type for grouping: (string | number)[]
    type_parameters: $ => seq('<', commaSep1($.identifier), '>'),

    // Type arguments at call sites: foo<Person>(x), JSON.parse<T>(s)
    // Uses external scanner to disambiguate '<' from less-than
    block: $ => seq('{', repeat($._statement), '}'),

    return_statement: $ => seq('return', optional($._expression), ';'),

    expression_statement: $ => seq($._expression, ';'),

    // =========================================================================
    // Expressions
    // =========================================================================

    _expression: $ => choice(
      $.identifier,
      $.number,
      $.string,
      $.boolean,
      $.null,
      $.undefined,
      $.this,
      $.assignment_expression,
      $.ternary_expression,
      $.binary_expression,
      $.unary_expression,
      $.await_expression,
      $.try_expression,
      $.call_expression,
      $.generic_call_expression,
      $.member_expression,
      $.subscript_expression,
      $.deref_expression,
      $.new_expression,
      $.array,
      $.object,
      $.arrow_function,
      $.parenthesized_expression,
      $.macro_comptime,
      $.macro_emit_expr,
      $.match_expression,
      $.type_assertion_expression,
      $.update_expression,
      // JSX expressions
      $.jsx_element,
      $.jsx_fragment,
    ),

    ternary_expression: $ => prec.right(2, seq(
      $._expression, '?', $._expression, ':', $._expression,
    )),

    // =========================================================================
    // Match Expression (Pattern Matching)
    // =========================================================================
    // match (discriminant) {
    //     pattern => expression,
    //     [x, y] => x + y,
    //     _ => default,
    // }

    binary_expression: $ => choice(
      prec.left(12, seq($._expression, '*', $._expression)),
      prec.left(12, seq($._expression, '/', $._expression)),
      prec.left(12, seq($._expression, '%', $._expression)),
      prec.left(11, seq($._expression, '+', $._expression)),
      prec.left(11, seq($._expression, '-', $._expression)),
      prec.left(10, seq($._expression, '<<', $._expression)),
      prec.left(10, seq($._expression, '>>', $._expression)),
      prec.left(10, seq($._expression, '>>>', $._expression)),
      prec.left(9, seq($._expression, '<', $._expression)),
      prec.left(9, seq($._expression, '>', $._expression)),
      prec.left(9, seq($._expression, '<=', $._expression)),
      prec.left(9, seq($._expression, '>=', $._expression)),
      prec.left(8, seq($._expression, '===', $._expression)),
      prec.left(8, seq($._expression, '!==', $._expression)),
      prec.left(8, seq($._expression, '==', $._expression)),
      prec.left(8, seq($._expression, '!=', $._expression)),
      prec.left(7, seq($._expression, '&', $._expression)),
      prec.left(6, seq($._expression, '^', $._expression)),
      prec.left(5, seq($._expression, '|', $._expression)),
      prec.left(4, seq($._expression, '&&', $._expression)),
      prec.left(3, seq($._expression, '||', $._expression)),
      prec.left(3, seq($._expression, '??', $._expression)),
      prec.left(2, seq($._expression, '..', $._expression)),
      prec.left(2, seq($._expression, '...', $._expression)),
      prec.left(1, seq($._expression, '|>', $._expression)),
      prec.right(13, seq($._expression, '**', $._expression)),
    ),

    await_expression: $ => prec(14, seq('await', $._expression)),

    // try expression for Result unwrapping: try expr or try expr catch default
    call_expression: $ => prec(18, seq(
      field('function', $._expression),
      field('arguments', $.arguments),
    )),

    // Generic call: foo<T>(x), obj.method<T>(x)
    // External scanner resolves '<' as type args (not comparison)
    arguments: $ => seq('(', optional(commaSep1($._expression)), ')'),

    member_expression: $ => prec(18, seq(
      field('object', $._expression),
      '.',
      field('property', $._identifier_or_keyword),
    )),

    // Subscript/index expression: obj[key], arr[0]
    array: $ => seq('[', optional(commaSep1($._expression)), ']'),

    object: $ => seq('{', optional(commaSep1(choice($.pair, $.shorthand_property))), '}'),

    pair: $ => seq(
      field('key', choice($.identifier, $.string)),
      ':',
      field('value', $._expression),
    ),

    // Shorthand property: { name } instead of { name: name }
    array_pattern: $ => seq(
      '[',
      optional(commaSep1(choice(
        $.pattern_element,
        $.rest_pattern,
      ))),
      ']',
    ),

    // {x, y} or {x: a, y: b} or {x, ...rest}
    object_pattern: $ => seq(
      '{',
      optional(commaSep1(choice(
        $.pattern_property,
        $.rest_pattern,
      ))),
      '}',
    ),

    // Element in array pattern: identifier, nested pattern, or with default
    // NOTE: Type annotations go on the whole pattern, not individual elements
    pattern_element: $ => seq(
      field('name', choice($.identifier, $.array_pattern, $.object_pattern)),
      optional(seq('=', field('default', $._expression))),
    ),

    // Property in object pattern: x or x: alias or x = default
    // NOTE: Type annotations go on the whole pattern, not individual properties
    pattern_property: $ => choice(
      // With alias: { x: alias } or { x: alias = default } (must come first for precedence)
      seq(
        field('key', $.identifier),
        ':',
        field('value', choice($.identifier, $.array_pattern, $.object_pattern)),
        optional(seq('=', field('default', $._expression))),
      ),
      // Shorthand: { x } or { x = default }
      seq(
        field('name', $.identifier),
        optional(seq('=', field('default', $._expression))),
      ),
    ),

    // Rest pattern in destructuring: ...rest
    rest_pattern: $ => seq(
      '...',
      field('name', $.identifier),
    ),

    // Arrow function (closure) with full TypeScript syntax support:
    // - x => x + 1                          (single param, no parens)
    // - (x) => x + 1                        (single param with parens)
    // - (x, y) => x + y                     (multiple params)
    // - (x: number) => x + 1                (typed param)
    // - (x: number): string => x.toString() (with return type)
    // - async (x) => await fetch(x)         (async arrow)
    // - <T>(x: T) => x                      (generic arrow)
    // Use prec.dynamic to prefer arrow function when => is seen
    arrow_function: $ => prec.dynamic(1, prec.right(seq(
      optional('async'),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', choice(
        $.identifier,                         // x => ...
        $.arrow_function_parameters,          // (x, y) => ... or () => ...
      )),
      optional(field('return_type', $.type_annotation)),  // : ReturnType
      '=>',
      field('body', choice($.block, $._expression)),
    ))),

    // Arrow function parameters - like regular parameters but in parens
    arrow_function_parameters: $ => seq(
      '(',
      optional(commaSep1($.arrow_function_parameter)),
      ')',
    ),

    // Arrow function parameter with full TypeScript support including destructuring
    // Use prec.dynamic to prefer this over assignment_expression when followed by => or ,
    arrow_function_parameter: $ => prec.dynamic(2, choice(
      // Rest parameter: ...args or ...args: string[]
      $.rest_parameter,
      // Destructuring patterns: ([a, b]) => ... or ({x, y}) => ...
      seq(
        field('pattern', choice($.array_pattern, $.object_pattern)),
        optional($.type_annotation),
        optional(seq('=', field('default', $._expression))),
      ),
      // Regular parameter: x or x: number or x = default or x: number = default
      seq(
        field('name', $.identifier),
        optional($.type_annotation),
        optional(seq('=', field('default', $._expression))),
      ),
    )),

    // Rest/spread parameter for functions and arrow functions
    rest_parameter: $ => seq(
      '...',
      field('name', $.identifier),
      optional($.type_annotation),
    ),

    // Lower precedence so arrow_function wins for (x = y) => ...
    parenthesized_expression: $ => prec(-1, seq('(', $._expression, ')')),

    // =========================================================================
    // JSX (TypeScript/React-style)
    // =========================================================================

    // JSX element: <div>...</div> or <Component prop={val} />
    identifier: $ => token(/[a-zA-Z_$][a-zA-Z0-9_$]*/),

    // Backtick-quoted operator identifier: `==`, `<`, `!=`, `[]`, `[]=`, `+`, etc.
    // Used as function/method names for operator overloading.
    // Higher precedence than template_string to avoid ambiguity in function-name position.
    number: $ => choice(
      /0[xX][0-9a-fA-F_]+[n]?/,
      /0[bB][01_]+[n]?/,
      /0[oO][0-7_]+[n]?/,
      /\d[0-9_]*(\.[0-9_]+)?([eE][+-]?\d+)?/,
      /\d[0-9_]*n/,
    ),

    string: $ => choice(
      // Use token() to make strings atomic - prevents // inside strings from being parsed as comments
      token(seq('"', repeat(choice(/[^"\\]/, /\\./)), '"')),
      token(seq("'", repeat(choice(/[^'\\]/, /\\./)), "'")),
      $.template_string,
    ),

    _identifier_or_keyword: $ => choice(
      $.identifier,
      $.operator_identifier,
      $._contextual_keyword,
    ),

    null: $ => 'null',
